# BSides-Roanoke-2024-Badge

./: README.md
badge_3d_parts/lights/: arc_v1.scad  arc_v3.3mf  arc_v3.scad  arc_v3.stl  arc_v4.scad  arc_v4.stl  arc_v5.scad  arc_v6.scad  arc_v6.stl  arc_v7.scad  arc_v7.stl  arc_v8.scad  arc_v8.stl  backing.stl  backing_v1.stl  backing_v2.stl  backing_v3.stl  backing_v4.stl
badge_3d_parts/support/: support.scad  support.stl
badge_fw/: README.md
badge_pcb/: README.md
badge_puzzles/: README.md
badge_puzzles/Lights/: Light1_Green.txt  Light2_Blue.txt  Light3_Red.txt  light_puzzles_all.txt
badge_puzzles/Printed/: Printed1_Ring.txt  Printed2_Symbols.txt  Printed3_Science.txt  Printed4_Snake.txt  Printed5_CodeBlock.txt  printed_puzzles_all.txt
badge_puzzles/Serial/: Serial1.txt  Serial2.txt  Serial3.txt  (+1 more)
kiosk_3d_parts/: TagScannerCasev03.scad  TagScannerCasev03_pico.3mf  TagScannerCasev03_pico.scad  TagScannerCasev03_pico.stl  TagScannerCasev03_pico_v2.scad  TagScannerCasev03_pico_v2.stl  TagScannerCasev03_pico_v3.stl  TagScannerCasev03_pico_v3_bottom.scad  TagScannerCasev03_pico_v3_bottom.stl  TagScannerCasev03_pico_v3_top.stl  TagScannerCasev03_pico_v4.stl
kiosk_fw/: README.md
kiosk_server/: README.md
kiosk_server/graph_gen/: README.md  graph_gen.py  pyproject.toml
kiosk_server/sls/: README.md  build.sh  handler.py  package-lock.json  package.json  pyproject.toml  serverless.yml
kiosk_server/sls/lib/: part_handler.py
kiosk_server/sls/utils/: test_dump.py
results/: README.md  badgelist  scanlist  scores.json  secret_scoreboard.csv
(+93 files in other folders)
