[tool.poetry]
name = "badge-api-2024"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
tabulate = "^0.9.0"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.34.140"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
